--- a/wp-content/themes/askonasholt2016/package.json
+++ b/wp-content/themes/askonasholt2016/package.json
@@ -23,21 +23,21 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.1.0",
-    "babel-core": "^6.5.2",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-es2015-arrow-functions": "^6.3.13",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.3.13",
     "babel-plugin-transform-es2015-block-scoping": "^6.4.0",
     "babel-plugin-transform-es2015-classes": "^6.3.15",
     "babel-plugin-transform-es2015-destructuring": "^6.3.15",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-es2015-parameters": "^6.3.26",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
     "babel-plugin-transform-es2015-spread": "^6.4.0",
     "babel-plugin-transform-es2015-template-literals": "^6.3.13",
     "babel-preset-es2015": "^6.5.0",
     "babel-register": "^6.5.2",
-    "bower": "~1.6.4",
-    "browser-sync": "^2.10.0",
+    "bower": "^1.8.8",
+    "browser-sync": "^2.26.3",
     "colors": "^1.1.2",
     "dateformat": "^1.0.12",
     "del": "^2.2.0",
@@ -60,7 +60,7 @@
     "gulp-uncss": "^1.0.4",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.0.2",
-    "jshint": "^2.8.0",
+    "jshint": "^2.10.1",
     "merge-stream": "^1.0.0",
     "motion-ui": "^1.1.0",
     "run-sequence": "^1.1.5",
@@ -74,5 +74,8 @@
     "postinstall": "bower install && gulp build",
     "production": "gulp --production",
     "watch": "gulp"
+  },
+  "dependencies": {
+    "natives": "^1.1.6"
   }
 }
